--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,9 @@ Suggests:
     rmarkdown,
     knitr
 VignetteBuilder: knitr
+Imports: Populationpack2016, 
+         knitr, 
+         ggplot2,
+         devtools, 
+         usethis
 
